// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderFooter/> render() should render 1`] = `
<div
  class="container container-fluid"
>
  <div
    class="row"
  >
    <div
      class="col-12 order-2 col-xl-7 order-xl-1"
    >
      <div
        class="row"
      >
        <div
          class="col-12 col-lg-6"
        >
          <div
            class="form-group"
          >
            <label
              class=""
              for="amount"
            >
              Refund with: Manual
            </label>
            <div
              class="container amountInput"
            >
              <span
                class="leftLabel"
                style="width: 2rem;"
              >
                $
              </span>
              <input
                class="input form-control"
                id="amount"
                max="1.2"
                min="0"
                required=""
                step="0.01"
                style="padding-left: 2rem;"
                type="number"
                value="1.00"
              />
            </div>
          </div>
        </div>
        <div
          class="col-12 col-lg-6"
        >
          <div
            class="form-group"
          >
            <label
              class=""
              for="reason"
            >
              Reason for canceling this order
            </label>
            <select
              class="form-control"
              id="reason"
            >
              <option
                value="customer"
              >
                Customer changed/canceled order
              </option>
              <option
                value="fraud"
              >
                Fraudulent order
              </option>
              <option
                value="inventory"
              >
                Items unavailable
              </option>
              <option
                value="declined"
              >
                Payment declined
              </option>
              <option
                value="other"
              >
                Other
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-12"
        >
          <div
            class="form-group"
          >
            <label
              class=""
              for="discrepancy-reason"
            >
              Reason for custom refund amount
            </label>
            <select
              class="discrepancyReasonInput form-control"
              id="discrepancy-reason"
            >
              <option
                value="restock"
              >
                Restocking fee
              </option>
              <option
                value="damage"
              >
                Damaged goods
              </option>
              <option
                value="customer"
              >
                Customer satisfaction
              </option>
              <option
                value="other"
              >
                Other
              </option>
            </select>
            <small
              class="form-text text-muted"
            >
              The amount being refunded is different from the value of items being returned.
            </small>
          </div>
          <div
            class="mb-3"
          >
            <label
              class="label label"
              for="checkbox-1"
            >
              <input
                checked=""
                class="input"
                id="checkbox-1"
                name="checkbox-1"
                type="checkbox"
              />
              Restock items
            </label>
            <div
              class="caption caption"
            >
              The claimed quantity for products in this order will be restocked back to your store.
            </div>
          </div>
          <div
            class="mb-3"
          >
            <label
              class="label label"
              for="notify-customer"
            >
              <input
                checked=""
                class="input"
                id="notify-customer"
                name="notify-customer"
                type="checkbox"
              />
              Send notification to customer
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mb-sm-4 col-12 order-1 col-xl-5 order-xl-2"
    >
      <dl
        class="row text-right mb-0"
      >
        <dt
          class="col-7 mb-2 grey"
        >
          Subtotal
        </dt>
        <dd
          class="col-5 mb-2"
        >
          <span>
            $1.00
          </span>
        </dd>
        <dt
          class="col-7 grey mt-2"
        >
          <label
            class="d-inline"
            for="shipping"
          >
            Shipping
             
            <span>
              (
              <span>
                $2.00
              </span>
               
              remaining)
            </span>
          </label>
        </dt>
        <dd
          class="col-5 mb-2"
        >
          <div
            class="container text-right"
          >
            <span
              class="leftLabel"
              style="width: 2rem;"
            >
              $
            </span>
            <input
              class="input form-control"
              id="shipping"
              max="2"
              min="0"
              required=""
              step="0.01"
              style="padding-left: 2rem;"
              type="number"
              value="0.00"
            />
          </div>
        </dd>
        <dt
          class="col-7 mb-2 grey"
        >
          Discounts
        </dt>
        <dd
          class="col-5 mb-2"
        >
          —
        </dd>
        <dt
          class="col-7 mb-2 grey"
        >
          Tax
        </dt>
        <dd
          class="col-5 mb-2"
        >
          <span>
            $0.20
          </span>
        </dd>
        <dt
          class="col-7 mb-2 grey"
        >
          Total available to refund
        </dt>
        <dd
          class="col-5 mb-2"
        >
          <span>
            $1.20
          </span>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`<OrderFooter/> render() should render for refund order action 1`] = `
<div
  class="container container-fluid"
>
  <div
    class="row"
  >
    <div
      class="col-12 order-2 col-xl-7 order-xl-1"
    >
      <div
        class="row"
      >
        <div
          class="col-12 col-lg-6"
        >
          <div
            class="form-group"
          >
            <label
              class=""
              for="amount"
            >
              Refund with: Manual
            </label>
            <div
              class="container amountInput"
            >
              <span
                class="leftLabel"
                style="width: 2rem;"
              >
                $
              </span>
              <input
                class="input form-control"
                id="amount"
                max="1.2"
                min="0"
                required=""
                step="0.01"
                style="padding-left: 2rem;"
                type="number"
                value="1.00"
              />
            </div>
          </div>
        </div>
        <div
          class="col-12 col-lg-6"
        >
          <div
            class="form-group"
          >
            <label
              class=""
              for="reason"
            >
              Reason for refund
            </label>
            <input
              class="form-control"
              id="reason"
              type="text"
              value=""
            />
            <small
              class="form-text text-muted"
            >
              Only you and other staff can see this reason.
            </small>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-12"
        >
          <div
            class="form-group"
          >
            <label
              class=""
              for="discrepancy-reason"
            >
              Reason for custom refund amount
            </label>
            <select
              class="discrepancyReasonInput form-control"
              id="discrepancy-reason"
            >
              <option
                value="restock"
              >
                Restocking fee
              </option>
              <option
                value="damage"
              >
                Damaged goods
              </option>
              <option
                value="customer"
              >
                Customer satisfaction
              </option>
              <option
                value="other"
              >
                Other
              </option>
            </select>
            <small
              class="form-text text-muted"
            >
              The amount being refunded is different from the value of items being returned.
            </small>
          </div>
          <div
            class="mb-3"
          >
            <label
              class="label label"
              for="checkbox-3"
            >
              <input
                checked=""
                class="input"
                id="checkbox-3"
                name="checkbox-3"
                type="checkbox"
              />
              Restock items
            </label>
            <div
              class="caption caption"
            >
              The claimed quantity for products in this order will be restocked back to your store.
            </div>
          </div>
          <div
            class="mb-3"
          >
            <label
              class="label label"
              for="notify-customer"
            >
              <input
                checked=""
                class="input"
                id="notify-customer"
                name="notify-customer"
                type="checkbox"
              />
              Send notification to customer
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mb-sm-4 col-12 order-1 col-xl-5 order-xl-2"
    >
      <dl
        class="row text-right mb-0"
      >
        <dt
          class="col-7 mb-2 grey"
        >
          Subtotal
        </dt>
        <dd
          class="col-5 mb-2"
        >
          <span>
            $1.00
          </span>
        </dd>
        <dt
          class="col-7 grey mt-2"
        >
          <label
            class="d-inline"
            for="shipping"
          >
            Shipping
             
            <span>
              (
              <span>
                $2.00
              </span>
               
              remaining)
            </span>
          </label>
        </dt>
        <dd
          class="col-5 mb-2"
        >
          <div
            class="container text-right"
          >
            <span
              class="leftLabel"
              style="width: 2rem;"
            >
              $
            </span>
            <input
              class="input form-control"
              id="shipping"
              max="2"
              min="0"
              required=""
              step="0.01"
              style="padding-left: 2rem;"
              type="number"
              value="0.00"
            />
          </div>
        </dd>
        <dt
          class="col-7 mb-2 grey"
        >
          Discounts
        </dt>
        <dd
          class="col-5 mb-2"
        >
          —
        </dd>
        <dt
          class="col-7 mb-2 grey"
        >
          Tax
        </dt>
        <dd
          class="col-5 mb-2"
        >
          <span>
            $0.20
          </span>
        </dd>
        <dt
          class="col-7 mb-2 grey"
        >
          Total available to refund
        </dt>
        <dd
          class="col-5 mb-2"
        >
          <span>
            $1.20
          </span>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
